<resources>
    <string name="app_name">My Application</string>
    <string name="jogos_mortais_qual_filme_da_franquia_de_terror_mais_pesado">Jogos Mortais: qual filme da franquia de terror é mais pesado?</string>
    <string name="qual_a_ordem_cronol_gica_dos_filmes_jogos_mortais">Qual é a ordem cronológica dos filmes Jogos Mortais?</string>
    <string name="top_stories">Top Stories</string>
    <string name="conhe_a_os_drones_de_papel_o_usados_pela_ucr_nia_na_guerra_contra_a_r_ssia">Conheça os drones de papelão usados pela Ucrânia na guerra contra a Rússia</string>
    <string name="a_empresa_australiana_sypaq_criou_o_corvo_precision_payload_delivery_system_ppds_para_uso_militar_policial_seguran_a_de_fronteira_e_servi_os_de_emerg_ncia_bem_como_seguran_a_alimentar_inspe_o_de_ativos_e_busca_e_resgate">A empresa australiana Sypaq criou o Corvo Precision Payload Delivery System (PPDS) para uso militar, policial, segurança de fronteira e serviços de emergência, bem como segurança alimentar, inspeção de ativos e busca e resgate.</string>
    <string name="a_austr_lia_tem_fornecido_ucr_nia_100_drones_de_papel_o_por_m_s_desde_mar_o_deste_ano_a_ajuda_faz_parte_de_um_acordo_no_valor_de_15_7_milh_es_de_libras_quase_r_100_milh_es_fechado_em_julho_de_2021">A Austrália tem fornecido à Ucrânia 100 drones de papelão por mês desde março deste ano. A ajuda faz parte de um acordo no valor de 15,7 milhões de libras, quase R$ 100 milhões, fechado em julho de 2021.</string>
    <string name="drones_de_papel_o_foram_utilizados_pela_ucr_nia_no_ataque_a_um_aer_dromo_de_kursk_no_oeste_da_r_ssia_no_dia_27_de_agosto">Drones de papelão foram utilizados pela Ucrânia no ataque a um aeródromo de Kursk, no oeste da Rússia, no dia 27 de agosto</string>
</resources>